<resources>
    <string name="app_name">Miami Vineyard Volunteer Connect</string>

    <!-- Login In -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid.</string>
    <string name="error_invalid_password">This password is too short.</string>
    <string name="error_incorrect_password">This password is incorrect.</string>
    <string name="error_field_required">This field is required.</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>

    <!-- Social Media UI -->
    <string name="ht_sharethelove">#ShareTheLove</string>
    <string name="lbl_facebook_handle">Miami Vineyard</string>
    <string name="lbl_instagram_handle">MiamiVineyard</string>
    <string name="lbl_twitter_handle">MiamiVineyard</string>
    <string name="lbl_vimeo_handle">MiamiVineyard</string>
    <string name="lbl_youtube_handle">MiamiVineyard</string>
    <!-- Give UI -->
    <string name="lblGiveOnline">Go to our Online E-Giving Program.</string>
    <string name="lbl_GiveHeader">Ways to Give</string>
    <string name="lblGiveViaText">Text your gift amount to (305) 440.4455.</string>
    <string name="lblGiveAtBookstore">You can also give by credit or debit card at our Bookstore.</string>
    <!-- Podcasts UI -->
    <string name="lblPodcastsIntro">Podcasts are available through our website or through our YouTube channel.</string>
    <string name="lblPodcastsHeader">Podcasts</string>
    <string name="lblWebPodcasts">MiamiVineyard.com</string>
    <string name="lblYouTubePodcasts">Miami Vineyard</string>
    <string name="btnSendPrayerRequest">Send</string>
    <string name="edttxtPrayerText">Prayer goes here.</string>
    <string name="txtvwRequestType">Type of Request</string>
    <string name="txtvwName">Name</string>
    <string name="txtvwPrayerRequestIntro">Send us a prayer request and one of our Pastors will pray for you by name.</string>
    <string name="txtvwPrayerRequestHeader">Prayer Requests</string>
    <string name="txtvwHomeHeader">Welcome to the Miami Vineyard Volunteer Connect BETA App!</string>

    <!-- URLS -->
    <string name="WebGiving"><a href="https://e-giving.org/egivinglogin.asp?id=2387">Go to our Online E-Giving Program</a></string>
    <string name="FacebookProfile"><a href="https://www.facebook.com/miamivineyard">Miami Vineyard - FaceBook</a></string>
    <string name="TwitterProfile"><a href="https://twitter.com/miamivineyard">Miami Vineyard - Twitter</a></string>
    <string name="InstagramProfile"><a href="https://www.instagram.com/miamivineyard/">Miami Vineyard - Instagram</a></string>
    <string name="YouTubeProfile"><a href="https://www.youtube.com/user/miamivineyard">Miami Vineyard - YouTube</a></string>
    <string name="VimeoProfile"><a href="https://vimeo.com/miamivineyard">Miami Vineyard - Vimeo</a></string>

    <string name="YouTubeTrainings"><a href="https://www.youtube.com/user/miamivineyard">Miami Vineyard</a></string>
    <string name="VimeoTrainings"><a href="https://vimeo.com/miamivineyard">Miami Vineyard</a></string>

    <string name="WebPodcasts"><a href="http://www.miamivineyard.com/podcast">MiamiVineyard.com</a></string>
    <string name="YouTubePodcasts"><a href="https://www.youtube.com/playlist?list=PLfe5COtQEJzLSQJs0s2x92QOmvN9ck3KO">MiamiVineyard</a></string>

    <!-- Bulletin -->

    <string name="Select_Feed">Select Feed</string>
    <string name="training_resources_videos">Training Videos</string>
    <string name="lbl_training_resources">Training Resources</string>
    <string name="lbl_more_training_resources">For more training resources please reach out to your Team Leader.</string>
    <string name="lbl_step_by_step_guides">Step-by-Step Guides</string>
    <string name="prayer_request_name">Name</string>
    <string name="prayer_request_type">Type of Request</string>
    <string name="lbl_bulletin_board_header">What\'s New at MVCC</string>

    <string-array name="feed_list">
        <item>MVCC Cafe</item>
        <item>MVCC Ushers</item>
        <item>MVCC TEST</item>

    </string-array>

    <integer-array name="feed_img_list">
        <item>@drawable/vine</item>
        <item>@drawable/twitter</item>
        <item>@drawable/facebook</item>

    </integer-array>
        <string-array name="schedule_array">
            <item>Kids Church</item>
            <item>Ushers</item>
            <item>Cafe</item>
            <item>Bookstore</item>
            <item>Proofreaders</item>
        </string-array>

</resources>
