<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_podcasts"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.miamivineyard.sagrariogrullon.mvcc_volunteer_management_app.PodcastsActivity"
    android:background="@drawable/wine">

    <TextView
        android:id="@+id/txtvwWebPodcast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:layout_above="@+id/imgbtnYouTubePodcasts"
        android:layout_alignLeft="@+id/txtvwPodcastHeader"
        android:layout_alignStart="@+id/txtvwPodcastHeader"
        android:textStyle="normal|bold"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:textSize="18sp"
        android:text="@string/WebPodcasts" />

    <TextView
        android:id="@+id/txtvwPodcastsIntro"
        android:text="@string/lblPodcastsIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/txtvwPodcastHeader"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="normal|bold"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtvwYouTubePodcasts"
        android:text="@string/YouTubePodcasts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="normal|bold"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_alignBottom="@+id/imgbtnYouTubePodcasts"
        android:layout_alignLeft="@+id/txtvwWebPodcast"
        android:layout_alignStart="@+id/txtvwWebPodcast"
        android:layout_marginBottom="14dp" />

    <ImageButton
        android:id="@+id/imgbtnWebPodcasts"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:srcCompat="@drawable/web"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/txtvwWebPodcast"
        android:layout_toStartOf="@+id/txtvwWebPodcast"
        android:layout_marginRight="17dp"
        android:layout_marginEnd="17dp"
        android:scaleType="fitCenter" />

    <TextView
        android:text="@string/lblPodcastsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:id="@+id/txtvwPodcastHeader"
        android:textStyle="normal|bold"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:id="@+id/imgbtnYouTubePodcasts"
        android:layout_width="60dp"
        app:srcCompat="@drawable/youtube"
        android:layout_marginTop="37dp"
        android:layout_height="60dp"
        android:scaleType="fitCenter"
        android:layout_below="@+id/imgbtnWebPodcasts"
        android:layout_alignLeft="@+id/imgbtnWebPodcasts"
        android:layout_alignStart="@+id/imgbtnWebPodcasts" />


</RelativeLayout>
